--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,26 @@
-/* Navigation */
+/* Global */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    text-align: center;
+    background: #fff;
+}
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+section {
+    padding: 120px 0 0 120px;
+}
+
+/* Splash */
 .navigation {
     padding: 15px 50px;
-    background-color: black;
     color: #fff;
     ul {
         padding: 0;
@@ -16,3 +35,19 @@
         margin-right: 500px;
     }
 } 
+
+.splash {
+    max-width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+    background-image: url('https://images.pexels.com/photos/924824/pexels-photo-924824.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+    position: relative;
+}
+.splash-inner {
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
