--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,15 +26,14 @@ section {
 }
 
 .btn {
-    
     min-width: 200px;
     height: 60px;
-    padding-top: 20px;
+    padding: 20px 40px;
     font-family: $font-text;
     font-size: 15px;
     text-align: center;
     text-decoration: none;
-    background-color: $color-light;
+    background-color: $color-three;
     color: $color-two;
 }
 
@@ -65,7 +64,7 @@ section {
     height: 100vh;
     background-position: center center;
     background-size: cover;
-    background-image: url('https://images.pexels.com/photos/1509534/pexels-photo-1509534.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+    background-image: url('https://images.pexels.com/photos/192136/pexels-photo-192136.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
     position: relative;
 }
 .splash-inner {
@@ -77,10 +76,10 @@ section {
     h2 {
        font-family: $font-header;
        font-size: 30px; 
-       letter-spacing: 0.2em;
+         letter-spacing: 0.1em;
     }
     h1 {
         font-family: $font-text;
-        font-size: 60px;
+        font-size: 60px; 
     }
 }
