--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,23 +91,21 @@ section {
     h3 {
         font-family: $font-text;
         font-size: 40px;
-    }
-    h4 {
-        font-family: $font-text;
+        margin-bottom: -20px;
     }
     h5 {
         font-family: $font-header;
-        font-size: 20px;
-        margin-top: -20px;
+        font-size: 10px;
     }
     .icon {
         border: 2px solid;
         border-radius: 50%;
         color: $color-three;
         border-color: $color-three;
-        padding: 10px;
+        padding: 10px 10px;
     }
-    .list-group {
-        padding-right: 25px;
+    .row {
+        padding: 40px;
+       font-family: $font-text;
     }
 }
