--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,7 +95,7 @@ section {
     }
     h5 {
         font-family: $font-header;
-        font-size: 10px;
+        font-size: 15px;
     }
     .icon {
         border: 2px solid;
@@ -114,27 +114,64 @@ section {
 
 /* Our portfolio */
 
-.portfolio {
-    background-color: $color-one;
-    opacity: 0.3;
-    margin: 0;
-    padding: 0;
-
+.Portfolio {
+    background-color:rgb(228, 228, 228);
+    padding: 40px 80px; 
+    h3 {
+        font-family: $font-text;
+        font-size: 40px;
+        font-weight: bold;
+    }
+    h5 {
+        font-family: $font-header;
+        font-size: 15px;
+        margin-top: -30px;
+        margin-bottom: 60px;
+    }
 }
-.portfolio .row {
+.Portfolio .row {
+    margin: 30px 0 0 0;
+    padding: 0;
+    :second-of-type {
+        margin-top: 30px;
+    }
+}
+.col {
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 40px 80px;
 }
 .portfolio-content {
-    flex: 1;
+    display: inline-block;
+    margin-right: 15px;
     img {
         width: 100%;
-        height: 50%;
+        height: 85%;
         object-fit: cover;
     }
 }
+.link {
+    width: 250px;
+    position: relative;
+    padding: 0;
+    text-align: left;
+    margin-top: -5px;
+}
+.btn-one {
+    background-color: $color-two;
+    color: $color-one;
+    font-family: $font-text;
+    font-weight: bold;
+    width: 345px;
+    margin: 0;
+    padding-top: 10px;
+    position: absolute;
+    span {
+        font-family: $font-header;
+        font-size: 10px;
+        font-weight: normal;
+    }
+}
+ 
 
 /* Footer */
 
@@ -164,8 +201,8 @@ section {
         font-size: 15px;
         padding: 12px;
         margin-right: 8px;
+    }
         i {
             color: $color-two;
-        }
     }
 }
