--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,6 @@ section {
 /* Splash */
 .navigation {
     padding: 15px 50px;
-    display: inline-block;
     .logo {
         font-family: 'Parisienne', cursive;
         padding-right: 500px;
@@ -210,20 +209,17 @@ section {
 @media (max-width: 767px) {
 .navigation {
     padding: 15px 0;
-        li {
-            margin-left: 0;
+        .logo {
+            padding-right: 0;
+            padding-left: 0;
         }
-        li:first-of-type {
-            margin-right: 0;
+        li {
+            margin-left: 7px;
         }
     }
     .col {
         flex-direction: column;
     }
-    .btn-one {
-        width: 259px;
-    }
-
     .footer .text {
         margin-right: 10px;
     }
